Version 2022.12.5 (2022-12-17)
- Remove sub_type from model to simplify code
- Remove obsolete methods
- Refactor binary_sensor check

Version 2022.12.4 (2022-12-13)
- Fix disable away_mode in climate. Now goes back to the origin control_mode.

Version 2022.12.3 (2022-12-12)
- Disable temperature validation for setting to off for HM heating group HM-CC-VG-1

Version 2022.12.2 (2022-12-09)
- Add HM-LC-AO-SM as light
- Remove hub from HmPlatform
- Hub is no longer an entity

Version 2022.12.1 (2022-12-01)
- Improve naming of modules
- Add new platform for text sysvars

Version 2022.12.0 (2022-12-01)
- Add transition to light turn_off
- Remove min brightness of 10 for lights

Version 2022.11.2 (2022-11-13)
- Generalize some collection helpers

Version 2022.11.1 (2022-11-03)
- Rename protected attributes to _attr*
- Code cleanup
- Add option to wrap entities to a different platform
  - Wrap LEVEL of HmIP-TRV*, HmIP-HEATING to sensor

Version 2022.11.0 (2022-11-02)
- Rename ATTR_HM_* to HM*
- Use generic property implementation

Version 2022.10.10 (2022-10-25)
- Use min_temp if target_temp < min_temp
- Remove event_loop from signatures
- Refactor central_config, create xml_rpc server in central_unit

Version 2022.10.9 (2022-10-23)
- Fix don't hide unignored parameters
- Refactor refesh_entity_data. Allow restriction to paramset and cache age.

Version 2022.10.8 (2022-10-21)
- Add semaphore to fetch sysvar and programs from backend

Version 2022.10.7 (2022-10-20)
- Accept some existing prefix for sysvars and programs to avoid additional prefixing with Sv_ / P_
  - accepted sysvar prefixes: V_, Sv_
  - accepted program prefixes: P_, Prg_
- Read min/max temperature for climate devices
- Min set temperature for thermostats is now 5.0 degree. 4.5. degree is only off

Version 2022.10.6 (2022-10-15)
- Replace data_* by HmDataOperationResult
- Use HmHvacMode HEAT instead of AUTO for simple thermostats
- Add HUMIDITY and ACTUAL_TEMPERATURE to heating groups
